# Eshara

./: Cargo.toml  README.md
data/: story.json
src/: game.rs  i18n.rs  lib.rs  main.rs  time.rs  tui.rs  ui.rs
src/story/: endings.rs  mod.rs  nodes.rs
