[package]
name = "eshara"
version = "0.1.0"
edition = "2021"
description = "A terminal-based narrative survival game inspired by Lifeline"
license = "MIT"

[dependencies]
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
